--- a/templates/back/ticket/new.html.twig
+++ b/templates/back/ticket/new.html.twig
@@ -26,6 +26,7 @@
                 <div class="card-body">
                     {{ form_start(form) }}
                     {{ form_row(form.content, {'label': 'Votre Message', 'attr': {'class': 'form-control', 'rows': '5', 'placeholder': 'Tapez votre réponse ici...'}}) }}
+                    {{ form_rest(form) }}
                     <button type="submit" class="btn btn-primary mt-3">Envoyer la Réponse</button>
                     {{ form_end(form) }}
                 </div>
