--- a/templates/front/profil/show.html.twig
+++ b/templates/front/profil/show.html.twig
@@ -41,7 +41,7 @@
                 <div class="block-information-user">
                     <ul class="list-unstyled">
                         <li class="py-2 text-larger">Rôle du forum: <strong>{% for role in app.user.roles %}{{ role }}{% if not loop.last %}, {% endif %}{% endfor %}</strong></li>
-                        <li class="py-2 text-larger">Sujets abordés: <strong>{{ app.user.Subjects|length }}</strong></li>
+                        <li class="py-2 text-larger">Sujets abordés: <strong>{{ app.user.subject|length }}</strong></li>
                         <li class="py-2 text-larger">Réponses créées: <strong>{{ app.user.comments|length }}</strong></li>
                         <li class="py-2 text-larger">Mes favoris: <strong>{{ app.user.likes|length }}</strong></li>
                         <li class="py-2 text-larger">Sujets fermées: <strong>0</strong></li>
