--- a/templates/front/projets/show.html.twig
+++ b/templates/front/projets/show.html.twig
@@ -7,57 +7,57 @@
 {% block content %}
 <div class="container">
 
-    <!-- Portfolio Item Heading -->
-    <h1 class="mt-6 my-4">{{ project.title }}
-        <small>Par {{ project.developer }}</small>
-    </h1>
+<!-- Portfolio Item Heading -->
+<h1 class="mt-6 my-4">{{ project.title }}
+    <small>Par {{ project.developer }}</small>
+</h1>
 
-    <!-- Portfolio Item Row -->
-    <div class="row">
-        <div class="col-md-8">
-            {% for image in project.images %}
-                <img class="img-fluid mb-4" src="{{ asset('image_project/' ~ image.name) }}" alt="{{ image.name }}" loading="lazy">
-            {% endfor %}
-        </div>
-
-        <div class="col-md-4">
-            <h3 class="my-3">Description du projet</h3>
-            <p>{{ project.description }}</p>
-            <h3 class="my-3">Détails du projet</h3>
-            <ul>
-                <li><strong>Date de création :</strong> {{ project.createdAt|date('d/m/Y') }}</li>
-                <li><strong>Lien :</strong> 
-                    <a href="{{ project.link }}" target="_blank" rel="noopener noreferrer">{{ project.title }}</a>
-                </li>
-                <li><strong>Catégories :</strong> 
-                    {% for category in project.categories %}
-                        <a href="{{ url('front_project_by_category') }}" class="badge bg-primary text-light">{{ category.name }}</a>
-                    {% endfor %}
-                </li>
-				<li><strong>Client :</strong> 
-                    <strong>{{ project.client }}</strong>
-                </li>
-            </ul>
-        </div>
-    </div>
-    <!-- /.row -->
-
-    <!-- Related Projects Row -->
-    <h3 class="my-4">Projets connexes</h3>
-    <div class="row">
-        {% for relatedProject in relatedProjects %}
-            <div class="col-md-3 col-sm-6 mb-4">
-                <a href="{{ url('front_project_show', { id: relatedProject.id }) }}">
-                    {% if relatedProject.images|length > 0 %}
-                        <img class="img-fluid" src="{{ asset('image_project/' ~ relatedProject.images[0].name) }}" alt="{{ relatedProject.title }}">
-                    {% else %}
-                        <img class="img-fluid" src="https://via.placeholder.com/500x300" alt="{{ relatedProject.title }}">
-                    {% endif %}
-                </a>
-            </div>
+<!-- Portfolio Item Row -->
+<div class="row">
+    <div class="col-md-8">
+        {% for image in project.images %}
+            <img class="img-fluid mb-4" src="{{ asset('image_project/' ~ image.name) }}" alt="{{ image.name }}" loading="lazy">
         {% endfor %}
     </div>
-    <!-- /.row -->
+
+    <div class="col-md-4">
+        <h3 class="my-3">Description du projet</h3>
+        <p>{{ project.description|nl2br }}</p>
+        <h3 class="my-3">Détails du projet</h3>
+        <ul>
+            <li><strong>Date de création :</strong> {{ project.createdAt|date('d/m/Y') }}</li>
+            <li><strong>Lien :</strong> 
+                <a href="{{ project.link }}" target="_blank" rel="noopener noreferrer">{{ project.title }}</a>
+            </li>
+            <li><strong>Catégories :</strong> 
+                {% for category in project.categories %}
+                    <a href="{{ url('front_project_by_category') }}" class="badge bg-primary text-light">{{ category.name }}</a>
+                {% endfor %}
+            </li>
+            <li><strong>Client :</strong> 
+                <strong>{{ project.client }}</strong>
+            </li>
+        </ul>
+    </div>
+</div>
+<!-- /.row -->
+
+<!-- Related Projects Row -->
+<h3 class="my-4">Projets connexes</h3>
+<div class="row">
+    {% for relatedProject in relatedProjects %}
+        <div class="col-md-3 col-sm-6 mb-4">
+            <a href="{{ url('front_project_show', { id: relatedProject.id }) }}">
+                {% if relatedProject.images|length > 0 %}
+                    <img class="img-fluid" src="{{ asset('image_project/' ~ relatedProject.images[0].name) }}" alt="{{ relatedProject.title }}">
+                {% else %}
+                    <img class="img-fluid" src="https://via.placeholder.com/500x300" alt="{{ relatedProject.title }}">
+                {% endif %}
+            </a>
+        </div>
+    {% endfor %}
+</div>
+<!-- /.row -->
 
 </div>
 <!-- /.container -->
