--- a/templates/front/ticket/email.html.twig
+++ b/templates/front/ticket/email.html.twig
@@ -40,7 +40,7 @@
                                                         <tr>
                                                             <td style="padding-right: 0px;padding-left: 0px;" align="center">
 
-                                                                <img align="center" border="0" src="https://scriptzenit.fr/img/email/image-1.png" alt="Image" title="Image" style="outline: none;text-decoration: none;-ms-interpolation-mode: bicubic;clear: both;display: inline-block !important;border: none;height: auto;float: none;width: 100%;max-width: 560px;" width="560"/>
+                                                                <img align="center" border="0" src="https://scriptzenit.fr/img/logo.png" alt="Image" title="Image" style="outline: none;text-decoration: none;-ms-interpolation-mode: bicubic;clear: both;display: inline-block !important;border: none;height: auto;float: none;width: 100%;max-width: 560px;" width="560"/>
 
                                                             </td>
                                                         </tr>
