--- a/templates/front/ticket/index.html.twig
+++ b/templates/front/ticket/index.html.twig
@@ -47,11 +47,15 @@
                             <td>{{ message.createdAt|date('d/m/Y H:i') }}</td>
                             <td>
                                 <span class="badge 
-                                    {% if message.status == 'en_attente' %}bg-warning
-                                    {% elseif message.status == 'en_cours' %}bg-primary
-                                    {% elseif message.status == 'resolu' %}bg-success
+                                    {% if ticket.status == 'en_cours' %}
+                                        <h1 class="text-body-emphasis">Réponse du support </h1>
+                                    {% elseif ticket.status == 'en_attente' %}
+                                        <h1 class="text-body-emphasis">Message du client </h1>
+                                    {% elseif ticket.status == 'termine' %}
+                                    <h1 class="text-body-emphasis">Cloture du ticket </h1>
                                     {% else %}bg-secondary{% endif %}">
                                     {{ message.status|capitalize }}
+                                    {% endif %}
                                 </span>
                             </td>
                             <td>
