--- a/templates/front/ticket/response_email.html.twig
+++ b/templates/front/ticket/response_email.html.twig
@@ -40,8 +40,7 @@
                                                         <tr>
                                                             <td style="padding-right: 0px;padding-left: 0px;" align="center">
 
-                                                                <img align="center" border="0" src="https://assets.unlayer.com/stock-templates1680793008154-logo.png" alt="Image" title="Image" style="outline: none;text-decoration: none;-ms-interpolation-mode: bicubic;clear: both;display: inline-block !important;border: none;height: auto;float: none;width: 100%;max-width: 560px;" width="560"/>
-
+                                                                <img align="center" border="0" src="https://scriptzenit.fr/img/logo.png" alt="Image" title="Image" style="outline: none;text-decoration: none;-ms-interpolation-mode: bicubic;clear: both;display: inline-block !important;border: none;height: auto;float: none;width: 100%;max-width: 560px;" width="560"/>
                                                             </td>
                                                         </tr>
                                                     </table>
