--- a/templates/front/home/index.html.twig
+++ b/templates/front/home/index.html.twig
@@ -451,9 +451,7 @@
         {% set testimonials = [
             { 'name': 'Alain Tixier', 'role': 'CEO SPIN OFF', 'img': 'sunday.png', 'text': 'La Nièvre c’est loin, mais heureusement il y a internet pour bosser !' },
             { 'name': 'Pascal Stier', 'role': 'Dirigeant Entreprise STIER', 'img': 'plomber.png', 'text': 'Très bonne prestation, je recommande. Demandez-lui ce qui vous intéresse, il va vous le réaliser.' },
-            { 'name': 'Michele GUERRIN', 'role': 'PDG OnlineFormapro', 'img': 'rating.png', 'text': 'Walid, un jeune sérieux, motivé et volontaire. Une grande envie de progresser et réussir. Passionné par le code, mérite de réussir.' },
-            { 'name': 'Badreddine HADJOUDJ', 'role': 'J\'accompagne les structures à la création de leur site web responsive ♦ Concepteur d\'application web', 'img': 'about.jpg', 'text': 'Je suis heureux de recommander Walid pour toute opportunité professionnelle liée à la conception et au développement d\'applications.' }
-
+            { 'name': 'Michele GUERRIN', 'role': 'PDG OnlineFormapro', 'img': 'rating.png', 'text': 'Walid, un jeune sérieux, motivé et volontaire. Une grande envie de progresser et réussir. Passionné par le code, mérite de réussir.' }
         ] %}
         {% for testimonial in testimonials %}
             <div class="testimonial-item">
