--- a/templates/front/includes/nav.html.twig
+++ b/templates/front/includes/nav.html.twig
@@ -1,3 +1,26 @@
+<style>
+    .libutton {
+    	display: flex;
+    	flex-direction: column;
+    	justify-content: center;
+   	 	padding: 7px;
+    	text-align: center;
+    	outline: none;
+    	text-decoration: none !important;
+    	color: #ffffff !important;
+    	width: 200px;
+    	height: 32px;
+    	border-radius: 16px;
+    	background-color: #0A66C2;
+    	font-family: "SF Pro Text", Helvetica, sans-serif;
+        margin-top: 13px;
+    }
+    @media (max-width: 576px) {
+        .libutton{
+			margin-left: 12px;
+		}
+    }
+</style>
 <header id="header">
     <nav class="navbar navbar-expand-lg fixed-top container-fluid text-white">
         <!-- Logo -->
@@ -71,6 +94,7 @@
                         </ul>
                     </li>
                 {% endif %}
+                <a class="libutton" href="https://www.linkedin.com/company/scriptzenit/" target="_blank">Follow on LinkedIn</a>
             </ul>
         </div>
     </nav>
