--- a/templates/front/ticket/index.html.twig
+++ b/templates/front/ticket/index.html.twig
@@ -46,16 +46,19 @@
                             </td>
                             <td>{{ message.createdAt|date('d/m/Y H:i') }}</td>
                             <td>
-                                <span class="badge 
-                                    {% if ticket.status == 'en_cours' %}
-                                        <h1 class="text-body-emphasis">Réponse du support </h1>
-                                    {% elseif ticket.status == 'en_attente' %}
-                                        <h1 class="text-body-emphasis">Message du client </h1>
-                                    {% elseif ticket.status == 'termine' %}
-                                    <h1 class="text-body-emphasis">Cloture du ticket </h1>
-                                    {% else %}bg-secondary{% endif %}">
-                                    {{ message.status|capitalize }}
-                                </span>
+                            <div>
+                                {% if message.status == 'en_cours' %}
+                                    <h1 class="text-body-emphasis badge bg-primary text-white">Réponse du support</h1>
+                                {% elseif message.status == 'en_attente' %}
+                                    <h1 class="text-body-emphasis badge bg-warning">Message du client</h1>
+                                {% elseif message.status == 'termine' %}
+                                    <h1 class="text-body-emphasis badge bg-success">Clôture du ticket</h1>
+                                {% elseif message.status == 'livre' %}
+                                    <h1 class="text-body-emphasis badge bg-info">Service livré</h1>
+                                {% else %}
+                                    <h1 class="text-body-emphasis badge bg-secondary">{{ message.status|capitalize }}</h1>
+                                {% endif %}
+                            </div>
                             </td>
                             <td>
                                 <a href="{{ path('respond_to_ticket', {'id': message.id}) }}" class="btn btn-outline-primary btn-sm" title="Répondre">
