--- a/templates/back/devis/index.html.twig
+++ b/templates/back/devis/index.html.twig
@@ -33,7 +33,7 @@
                             <ul>
                                 {% for attente in devis.attentesDesignWeb %}
                                     <li>
-									{% for list in attente %}
+									{% for list in devis.attentesDesignWeb %}
 										{{ list.label }}
 									{% endfor %}
 									</li>
