--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -24,7 +24,8 @@
 
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css">
-
+		
+		<link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/css/select2.min.css" rel="stylesheet" />
 
 		{% block stylesheets %}
 			{{ encore_entry_link_tags('app') }}
@@ -83,6 +84,7 @@
     		<script src="https://code.jquery.com/jquery-3.6.0.min.js" defer></script>
 			<script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
 			<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+			<script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/js/select2.min.js" defer></script>
 			<!-- Bootstrap JS -->
 			{{ encore_entry_script_tags('imagesloaded') }}
 			<script src="{{ asset('js/modernizr.custom.js') }}" defer></script>
