--- a/templates/front/includes/footer.html.twig
+++ b/templates/front/includes/footer.html.twig
@@ -28,6 +28,9 @@
                     <a href="{{ url('front_cguv') }}">Conditions générales de vente et d'utilisation</a>
                 </li>
                 <li>
+                    <a href="{{ url('front_condtions') }}">Conditions générales d'utilisation</a>
+                </li>
+                <li>
                     <a href="{{ url('front_pdc') }}">Politiques de confidentialité</a>
                 </li>
             </ul>
